--- a/demo/src/main/resources/static/index.html
+++ b/demo/src/main/resources/static/index.html
@@ -25,7 +25,7 @@
         <main class="content" id="main-content">
             <section class="card" aria-labelledby="query-heading">
                 <h2 id="query-heading">Query Index</h2>
-                <form class="row" role="search" aria-label="Search the index">
+                <form class="row" role="search" aria-label="Search the index" onsubmit="event.preventDefault(); queryIndexer();">
                     <label for="queryWord" class="sr-only">Search term</label>
                     <input 
                         type="text" 
@@ -37,7 +37,6 @@
                     />
                     <button 
                         type="submit" 
-                        onclick="queryIndexer()" 
                         aria-describedby="search-shortcut"
                         tabindex="2"
                     >Search</button>
